@@ -35,367 +35,367 @@ public final class DefaultLanguages {
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale VIETNAMESE = new Locale("vi"); //$NON-NLS-1$
+	public static final Locale VIETNAMESE = Locale.of("vi"); //$NON-NLS-1$
 
 	/** Useful constant for uzbek language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale UZBEK = new Locale("uz"); //$NON-NLS-1$
+	public static final Locale UZBEK = Locale.of("uz"); //$NON-NLS-1$
 
 	/** Useful constant for ukrainian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale UKRAINIAN = new Locale("uk"); //$NON-NLS-1$
+	public static final Locale UKRAINIAN = Locale.of("uk"); //$NON-NLS-1$
 
 	/** Useful constant for turkmen language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale TURKMEN = new Locale("tk"); //$NON-NLS-1$
+	public static final Locale TURKMEN = Locale.of("tk"); //$NON-NLS-1$
 
 	/** Useful constant for turkish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale TURKISH = new Locale("tr"); //$NON-NLS-1$
+	public static final Locale TURKISH = Locale.of("tr"); //$NON-NLS-1$
 
 	/** Useful constant for thai language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale THAI = new Locale("th"); //$NON-NLS-1$
+	public static final Locale THAI = Locale.of("th"); //$NON-NLS-1$
 
 	/** Useful constant for swahili language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SWAHILI = new Locale("sw"); //$NON-NLS-1$
+	public static final Locale SWAHILI = Locale.of("sw"); //$NON-NLS-1$
 
 	/** Useful constant for tajik language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale TAJIK = new Locale("tg"); //$NON-NLS-1$
+	public static final Locale TAJIK = Locale.of("tg"); //$NON-NLS-1$
 
 	/** Useful constant for swedish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SWEDISH = new Locale("sv"); //$NON-NLS-1$
+	public static final Locale SWEDISH = Locale.of("sv"); //$NON-NLS-1$
 
 	/** Useful constant for sinhala language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SINHALA = new Locale("si"); //$NON-NLS-1$
+	public static final Locale SINHALA = Locale.of("si"); //$NON-NLS-1$
 
 	/** Useful constant for zulu language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ZULU = new Locale("zu"); //$NON-NLS-1$
+	public static final Locale ZULU = Locale.of("zu"); //$NON-NLS-1$
 
 	/** Useful constant for slovenian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SLOVENIAN = new Locale("sl"); //$NON-NLS-1$
+	public static final Locale SLOVENIAN = Locale.of("sl"); //$NON-NLS-1$
 
 	/** Useful constant for slovak language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SLOVAK = new Locale("sk"); //$NON-NLS-1$
+	public static final Locale SLOVAK = Locale.of("sk"); //$NON-NLS-1$
 
 	/** Useful constant for serbian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SERBIAN = new Locale("sr"); //$NON-NLS-1$
+	public static final Locale SERBIAN = Locale.of("sr"); //$NON-NLS-1$
 
 	/** Useful constant for polish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale POLISH = new Locale("pl"); //$NON-NLS-1$
+	public static final Locale POLISH = Locale.of("pl"); //$NON-NLS-1$
 
 	/** Useful constant for filipino language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale FILIPINO = new Locale("fil"); //$NON-NLS-1$
+	public static final Locale FILIPINO = Locale.of("fil"); //$NON-NLS-1$
 
 	/** Useful constant for urdu language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale URDU = new Locale("ur"); //$NON-NLS-1$
+	public static final Locale URDU = Locale.of("ur"); //$NON-NLS-1$
 
 	/** Useful constant for nepali language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale NEPALI = new Locale("ne"); //$NON-NLS-1$
+	public static final Locale NEPALI = Locale.of("ne"); //$NON-NLS-1$
 
 	/** Useful constant for burmese language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale BURMESE = new Locale("my"); //$NON-NLS-1$
+	public static final Locale BURMESE = Locale.of("my"); //$NON-NLS-1$
 
 	/** Useful constant for mongolian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale MONGOLIAN = new Locale("mn"); //$NON-NLS-1$
+	public static final Locale MONGOLIAN = Locale.of("mn"); //$NON-NLS-1$
 
 	/** Useful constant for romanian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ROMANIAN = new Locale("ro"); //$NON-NLS-1$
+	public static final Locale ROMANIAN = Locale.of("ro"); //$NON-NLS-1$
 
 	/** Useful constant for maltese language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale MALTESE = new Locale("mt"); //$NON-NLS-1$
+	public static final Locale MALTESE = Locale.of("mt"); //$NON-NLS-1$
 
 	/** Useful constant for dhivehi language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale DHIVEHI = new Locale("dv"); //$NON-NLS-1$
+	public static final Locale DHIVEHI = Locale.of("dv"); //$NON-NLS-1$
 
 	/** Useful constant for malay language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale MALAY = new Locale("ms"); //$NON-NLS-1$
+	public static final Locale MALAY = Locale.of("ms"); //$NON-NLS-1$
 
 	/** Useful constant for macedonian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale MACEDONIAN = new Locale("mk"); //$NON-NLS-1$
+	public static final Locale MACEDONIAN = Locale.of("mk"); //$NON-NLS-1$
 
 	/** Useful constant for luxembourgish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale LUXEMBOURGISH = new Locale("lb"); //$NON-NLS-1$
+	public static final Locale LUXEMBOURGISH = Locale.of("lb"); //$NON-NLS-1$
 
 	/** Useful constant for lithuanian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale LITHUANIAN = new Locale("lt"); //$NON-NLS-1$
+	public static final Locale LITHUANIAN = Locale.of("lt"); //$NON-NLS-1$
 
 	/** Useful constant for latvian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale LATVIAN = new Locale("lv"); //$NON-NLS-1$
+	public static final Locale LATVIAN = Locale.of("lv"); //$NON-NLS-1$
 
 	/** Useful constant for lao language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale LAO = new Locale("lo"); //$NON-NLS-1$
+	public static final Locale LAO = Locale.of("lo"); //$NON-NLS-1$
 
 	/** Useful constant for kyrgyz language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale KYRGYZ = new Locale("ky"); //$NON-NLS-1$
+	public static final Locale KYRGYZ = Locale.of("ky"); //$NON-NLS-1$
 
 	/** Useful constant for kazakh language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale KAZAKH = new Locale("kk"); //$NON-NLS-1$
+	public static final Locale KAZAKH = Locale.of("kk"); //$NON-NLS-1$
 
 	/** Useful constant for hebrew language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale HEBREW = new Locale("he"); //$NON-NLS-1$
+	public static final Locale HEBREW = Locale.of("he"); //$NON-NLS-1$
 
 	/** Useful constant for indonesian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale INDONESIAN = new Locale("id"); //$NON-NLS-1$
+	public static final Locale INDONESIAN = Locale.of("id"); //$NON-NLS-1$
 
 	/** Useful constant for hindi language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale HINDI = new Locale("hi"); //$NON-NLS-1$
+	public static final Locale HINDI = Locale.of("hi"); //$NON-NLS-1$
 
 	/** Useful constant for icelandic language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ICELANDIC = new Locale("is"); //$NON-NLS-1$
+	public static final Locale ICELANDIC = Locale.of("is"); //$NON-NLS-1$
 
 	/** Useful constant for hungarian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale HUNGARIAN = new Locale("hu"); //$NON-NLS-1$
+	public static final Locale HUNGARIAN = Locale.of("hu"); //$NON-NLS-1$
 
 	/** Useful constant for georgian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale GEORGIAN = new Locale("ka"); //$NON-NLS-1$
+	public static final Locale GEORGIAN = Locale.of("ka"); //$NON-NLS-1$
 
 	/** Useful constant for oromo language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale OROMO = new Locale("om"); //$NON-NLS-1$
+	public static final Locale OROMO = Locale.of("om"); //$NON-NLS-1$
 
 	/** Useful constant for estonian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ESTONIAN = new Locale("et"); //$NON-NLS-1$
+	public static final Locale ESTONIAN = Locale.of("et"); //$NON-NLS-1$
 
 	/** Useful constant for tigrinya language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale TIGRINYA = new Locale("ti"); //$NON-NLS-1$
+	public static final Locale TIGRINYA = Locale.of("ti"); //$NON-NLS-1$
 
 	/** Useful constant for danish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale DANISH = new Locale("da"); //$NON-NLS-1$
+	public static final Locale DANISH = Locale.of("da"); //$NON-NLS-1$
 
 	/** Useful constant for czech language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale CZECH = new Locale("cs"); //$NON-NLS-1$
+	public static final Locale CZECH = Locale.of("cs"); //$NON-NLS-1$
 
 	/** Useful constant for greek language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale GREEK = new Locale("el"); //$NON-NLS-1$
+	public static final Locale GREEK = Locale.of("el"); //$NON-NLS-1$
 
 	/** Useful constant for croatian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale CROATIAN = new Locale("hr"); //$NON-NLS-1$
+	public static final Locale CROATIAN = Locale.of("hr"); //$NON-NLS-1$
 
 	/** Useful constant for khmer language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale KHMER = new Locale("km"); //$NON-NLS-1$
+	public static final Locale KHMER = Locale.of("km"); //$NON-NLS-1$
 
 	/** Useful constant for bulgarian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale BULGARIAN = new Locale("bg"); //$NON-NLS-1$
+	public static final Locale BULGARIAN = Locale.of("bg"); //$NON-NLS-1$
 
 	/** Useful constant for norwegian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale NORWEGIAN = new Locale("no"); //$NON-NLS-1$
+	public static final Locale NORWEGIAN = Locale.of("no"); //$NON-NLS-1$
 
 	/** Useful constant for bosnian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale BOSNIAN = new Locale("bs"); //$NON-NLS-1$
+	public static final Locale BOSNIAN = Locale.of("bs"); //$NON-NLS-1$
 
 	/** Useful constant for dzongkha language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale DZONGHKHA = new Locale("dz"); //$NON-NLS-1$
+	public static final Locale DZONGHKHA = Locale.of("dz"); //$NON-NLS-1$
 
 	/** Useful constant for russian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale RUSSIAN = new Locale("ru"); //$NON-NLS-1$
+	public static final Locale RUSSIAN = Locale.of("ru"); //$NON-NLS-1$
 
 	/** Useful constant for bengali language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale BENGALI = new Locale("bn"); //$NON-NLS-1$
+	public static final Locale BENGALI = Locale.of("bn"); //$NON-NLS-1$
 
 	/** Useful constant for azerbaijani language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale AZERBAIJANI = new Locale("az"); //$NON-NLS-1$
+	public static final Locale AZERBAIJANI = Locale.of("az"); //$NON-NLS-1$
 
 	/** Useful constant for arabic language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ARABIC = new Locale("ar"); //$NON-NLS-1$
+	public static final Locale ARABIC = Locale.of("ar"); //$NON-NLS-1$
 
 	/** Useful constant for dutch language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale DUTCH = new Locale("nl"); //$NON-NLS-1$
+	public static final Locale DUTCH = Locale.of("nl"); //$NON-NLS-1$
 
 	/** Useful constant for portuguese language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale PORTUGUESE = new Locale("pt"); //$NON-NLS-1$
+	public static final Locale PORTUGUESE = Locale.of("pt"); //$NON-NLS-1$
 	
 	/** Useful constant for armenian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ARMENIAN = new Locale("hy"); //$NON-NLS-1$
+	public static final Locale ARMENIAN = Locale.of("hy"); //$NON-NLS-1$
 
 	/** Useful constant for spannish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale SPANNISH = new Locale("es"); //$NON-NLS-1$
+	public static final Locale SPANNISH = Locale.of("es"); //$NON-NLS-1$
 
 	/** Useful constant for albanian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale ALBANIAN = new Locale("sq"); //$NON-NLS-1$
+	public static final Locale ALBANIAN = Locale.of("sq"); //$NON-NLS-1$
 
 	/** Useful constant for catalan language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale CATALAN = new Locale("ca"); //$NON-NLS-1$
+	public static final Locale CATALAN = Locale.of("ca"); //$NON-NLS-1$
 
 	/** Useful constant for persian language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale PERSIAN = new Locale("fa"); //$NON-NLS-1$
+	public static final Locale PERSIAN = Locale.of("fa"); //$NON-NLS-1$
 
 	/** Useful constant for finnish language.
 	 *
 	 * @since 4.0
 	 */
-	public static final Locale FINNISH = new Locale("fi"); //$NON-NLS-1$
+	public static final Locale FINNISH = Locale.of("fi"); //$NON-NLS-1$
 
 	private DefaultLanguages() {
 		//
